--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,8 +1,51 @@
+:root {
+  --primary-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --default-font: "Poppins", sans-serif;
+  --heading-font: "Playfair Display", serif;
+}
+body {
+  font-family: var(--default-font);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+  font-family: var(--heading-font);
+  color: black;
+}
 h1 {
-    font-weight: bold;
-    font-family: 'Playfair Display', serif;
+  font-size: 96px;
+}
+.hero h2 {
+  font-family: var(--heading-font);
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
 }
 p {
-    font-weight: normal;
-    font-family: 'Poppins', sans-serif;
+  font-weight: normal;
+}
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: O;
+  color: #272142;
+}
+.btn-branding {
+  background: var(--primary-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
