--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -85,6 +85,9 @@ p {
     text-align: center;
     padding: 0;
   }
+  nav a {
+    font-size: 12px;
+  }
 }
 .content h1 {
   font-size: 64px;
@@ -108,4 +111,29 @@ p {
 }
 .content p {
   font-size: 14px;
+}
+.logo {
+  max-width: 40px;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  margin-left: 15px;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav {
+  padding: 20px 0;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+  transition: all 100ms ease-in-out;
+}
+nav a:hover,
+nav li.active a {
+  color: var(--primary-color);
 }
