--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -137,3 +137,24 @@ nav a:hover,
 nav li.active a {
   color: var(--primary-color);
 }
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+footer .email-link:hover {
+  color: var(--primary-color);
+}
+footer {
+  margin: 60px 0;
+}
+footer .social-links a {
+  margin: 0 20px;
+  padding: 10px;
+  color: var(--primary-color);
+  font-size: 25px;
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: black;
+}
